--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
+  <meta name="google-site-verification" content="KpjWQkUqfESiMFIYB4kaC86UFFcCRZ7mjcKROk0dGcQ" />
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
